--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -240,7 +240,17 @@ default:
             - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
             - Tests\Integration\Behaviour\Features\Context\ShopFeatureContext
             - Tests\Integration\Behaviour\Features\Context\CurrencyFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\CategoryFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\CatalogPriceRuleContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\Product\UpdateCategoriesFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\CategoryFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\SupplierFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\Product\UpdateProductSuppliersFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\CatalogPriceRuleContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\ManufacturerFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\Product\UpdateBasicInformationFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\Product\UpdateOptionsFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\Product\AddProductFeatureContext
             - Tests\Integration\Behaviour\Features\Transform\SharedStorageTransformContext
             - Tests\Integration\Behaviour\Features\Transform\StringToBoolTransformContext
             - Tests\Integration\Behaviour\Features\Context\CountryFeatureContext
