--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1585,7 +1585,7 @@ services:
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_ECOTAX_TAX_RULES_GROUP_ID')"
       - '@prestashop.adapter.tax.tax_computer'
       - '@=service("prestashop.adapter.legacy.context").getContext().country.id'
-      - '@=service("prestashop.adapter.legacy.context").getContext().language.id'
+      - '@prestashop.adapter.tax_rules_group.repository.tax_rules_group_repository'
     tags:
       - { name: form.type }
 
