--- a/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
@@ -28,3 +28,15 @@ services:
     class: 'PrestaShop\PrestaShop\Adapter\Country\CommandHandler\AddCountryHandler'
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\AddCountryCommand' }
+
+  prestashop.adapter.country.command_handler.edit_country_handler:
+    public: true
+    class: 'PrestaShop\PrestaShop\Adapter\Country\CommandHandler\EditCountryHandler'
+    tags:
+      - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\EditCountryCommand' }
+
+  prestashop.adapter.country.query_handler.get_editable_country:
+    public: true
+    class: 'PrestaShop\PrestaShop\Adapter\Country\QueryHandler\GetCountryForEditingHandler'
+    tags:
+      - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Query\GetCountryForEditing' }
