--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
@@ -97,6 +97,7 @@ services:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
+      - '@prestashop.adapter.product.combination.validate.combination_validator'
 
   prestashop.adapter.product.combination.update.combination_stock_updater:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Update\CombinationStockUpdater
@@ -116,7 +117,7 @@ services:
   prestashop.adapter.product.combination.update.default_combination_updater:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Update\DefaultCombinationUpdater
     arguments:
-      - '@prestashop.adapter.product.combination.repository.combination_repository'
+      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
 
   prestashop.adapter.product.combination.update.combination_deleter:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Update\CombinationDeleter
