migrated country delete logic to symfony

--- a/src/PrestaShopBundle/Resources/config/routing/admin/improve/international/country.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/improve/international/country.yml
@@ -40,3 +40,15 @@ admin_countries_edit:
       id_country: countryId
   requirements:
     countryId: \d+
+
+admin_countries_delete:
+  path: /{countryId}/delete
+  methods: [ POST, DELETE ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Improve\International\CountryController::deleteAction'
+    _legacy_controller: AdminCountries
+#    _legacy_link: AdminCountries:deleteCountry
+    _legacy_parameters:
+      id_country: countryId
+  requirements:
+    countryId: \d+
