--- a/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
@@ -31,6 +31,12 @@ services:
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\AddCountryCommand' }
 
+  prestashop.adapter.country.command_handler.delete_country_handler:
+    public: true
+    class: 'PrestaShop\PrestaShop\Adapter\Country\CommandHandler\DeleteCountryHandler'
+    tags:
+      - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\DeleteCountryCommand' }
+
   prestashop.adapter.country.command_handler.edit_country_handler:
     public: true
     class: 'PrestaShop\PrestaShop\Adapter\Country\CommandHandler\EditCountryHandler'
