--- a/src/PrestaShopBundle/Resources/config/routing/admin/improve/design/cms_pages.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/improve/design/cms_pages.yml
@@ -34,6 +34,23 @@ admin_cms_pages_edit:
   requirements:
     cmsPageId: \d+
 
+admin_cms_pages_duplicate:
+  path: /{cmsPageId}/duplicate
+  methods: [ POST ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Improve\Design\CmsPageController::duplicateAction'
+    _legacy_controller: AdminCmsContent
+  requirements:
+    productId: \d+
+
+admin_cms_pages_view:
+  path: /{cmsPageId}/view
+  methods: GET
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Improve\Design\CmsPageController::viewAction'
+  requirements:
+    cmsPageId: \d+
+
 admin_cms_pages_toggle:
   path: /{cmsId}/toggle-status
   methods: POST
