--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
@@ -41,7 +41,7 @@ services:
   prestashop.adapter.product.combination.query_handler.get_combination_for_editing_handler:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\QueryHandler\GetCombinationForEditingHandler
     arguments:
-      - '@prestashop.adapter.product.combination.repository.combination_repository'
+      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
       - '@prestashop.core.product.combination.name_builder.combination_name_builder'
       - '@prestashop.adapter.product.stock.repository.stock_available_repository'
       - '@prestashop.adapter.attribute.repository.attribute_repository'
@@ -120,6 +120,7 @@ services:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Update\DefaultCombinationUpdater
     arguments:
       - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
+      - '@prestashop.adapter.product.repository.product_multi_shop_repository'
 
   prestashop.adapter.product.combination.update.combination_deleter:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Update\CombinationDeleter
