--- a/src/PrestaShopBundle/Resources/config/services/adapter/data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/data_provider.yml
@@ -105,3 +105,13 @@ services:
     class: PrestaShop\PrestaShop\Adapter\Employee\ContextEmployeeProvider
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getContext().employee'
+
+  prestashop.adapter.data_provider.contact_type:
+    class: PrestaShop\PrestaShop\Adapter\CustomerService\ContactTypeProvider
+    arguments:
+      - '@=service("prestashop.adapter.legacy.context").getContext().language.id'
+
+  prestashop.adapter.data_provider.customer_thread_status:
+    class: PrestaShop\PrestaShop\Adapter\CustomerService\CustomerThreadCustomerThreadStatusProvider
+    arguments:
+      - "@translator"
