--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -437,3 +437,11 @@ services:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
       - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
     public: true
+
+  prestashop.core.grid.query.builder.customer_thread:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Query\CountryThreadQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
+      - '@=service("prestashop.adapter.shop.context").getContextListShopID()'
+    public: true
