Replace AppKernel version constants by prestashop versions

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ services:
 
 framework:
   assets:
-    version: !php/const \AppKernel::VERSION
+    version: !php/const PrestaShop\PrestaShop\Core\Version::VERSION
 
   # esi: ~
   secret: "%secret%"
