--- a/.github/workflows/cron_js_routing.yml
+++ b/.github/workflows/cron_js_routing.yml
@@ -4,8 +4,13 @@ on:
     - cron: '0 23 * * *'
   workflow_dispatch:
 
+permissions: {}
 jobs:
   js-routing-dump:
+    permissions:
+      contents: write # to create branch (peter-evans/create-pull-request)
+      pull-requests: write # to create a PR (peter-evans/create-pull-request)
+
     runs-on: ubuntu-latest
     name: Update JS Routing
     strategy:
