--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,7 +1,12 @@
 name: Integration tests
 on: [ push, pull_request ]
+permissions:
+  contents: read # to clone the repos and get release assets (shivammathur/setup-php)
 jobs:
   integration:
+    permissions:
+      actions: write # to cancel/stop running workflows (styfle/cancel-workflow-action)
+      contents: read # to clone the repos and get release assets (shivammathur/setup-php)
     name: Integration tests
     runs-on: ubuntu-latest
     if: ${{ !startsWith(github.event.pull_request.title, 'Bump') && !endsWith(github.event.pull_request.title, 'in /tests/UI')}}
