--- a/src/PrestaShopBundle/Resources/config/services/adapter/supplier.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/supplier.yml
@@ -40,6 +40,15 @@ services:
         command: 'PrestaShop\PrestaShop\Core\Domain\Supplier\Command\DeleteSupplierCommand'
     public: true
 
+  prestashop.adapter.supplier.command_handler.delete_supplier_logo_image_handler:
+    class: 'PrestaShop\PrestaShop\Adapter\Supplier\CommandHandler\DeleteSupplierLogoImageHandler'
+    arguments:
+      - !php/const _PS_SUPP_IMG_DIR_
+      - !php/const _PS_TMP_IMG_DIR_
+    tags:
+      - name: tactician.handler
+        command: 'PrestaShop\PrestaShop\Core\Domain\Supplier\Command\DeleteSupplierLogoImageCommand'
+
   prestashop.adapter.supplier.command_handler.bulk_delete_supplier_handler:
     class: 'PrestaShop\PrestaShop\Adapter\Supplier\CommandHandler\BulkDeleteSupplierHandler'
     parent: 'prestashop.adapter.supplier.command_handler.abstract_delete_supplier_handler'
