--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -186,6 +186,12 @@ services:
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'profile'
 
+  prestashop.core.grid.data_factory.profiles_decorator:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\ProfileGridDataFactoryDecorator'
+    arguments:
+      - '@prestashop.core.grid.data_factory.profiles'
+      - '@security.helper'
+
   prestashop.core.grid.data_provider.cms_page_category:
     class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
     arguments:
