Fixed some smaller issues and added icons to data
# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/catalog_price_rule.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/catalog_price_rule.yml
@@ -59,7 +59,7 @@ admin_catalog_price_rules_list:
   path: /product-form-list
   methods: [ GET ]
   defaults:
-    _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\CatalogPriceRuleController::productFormListAction'
+    _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\CatalogPriceRuleController::listAction'
     _legacy_controller: AdminSpecificPriceRule
     # _legacy_link: AdminSpecificPriceRule:submitBulkdeletespecific_price_rule
   options:
