--- a/src/PrestaShopBundle/Resources/config/services/adapter/catalog_price_rule.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/catalog_price_rule.yml
@@ -32,13 +32,13 @@ services:
       - name: 'tactician.handler'
         command: 'PrestaShop\PrestaShop\Core\Domain\CatalogPriceRule\Query\GetCatalogPriceRuleForEditing'
 
-  prestashop.adapter.catalog_price_rule.query_handler.get_catalog_price_rule_list_handler:
-    class: 'PrestaShop\PrestaShop\Adapter\CatalogPriceRule\QueryHandler\GetCatalogPriceRuleListHandler'
+  prestashop.adapter.catalog_price_rule.query_handler.get_catalog_price_rule_list_for_product_handler:
+    class: 'PrestaShop\PrestaShop\Adapter\CatalogPriceRule\QueryHandler\GetCatalogPriceRuleListForProductHandler'
     arguments:
       - '@prestashop.adapter.catalog_price_rule.repository.catalog_price_rule_repository'
     tags:
       - name: 'tactician.handler'
-        command: 'PrestaShop\PrestaShop\Core\Domain\CatalogPriceRule\Query\GetCatalogPriceRuleList'
+        command: 'PrestaShop\PrestaShop\Core\Domain\CatalogPriceRule\Query\GetCatalogPriceRuleListForProduct'
 
   prestashop.adapter.catalog_price_rule.repository.catalog_price_rule_repository:
     class: PrestaShop\PrestaShop\Adapter\CatalogPriceRule\Repository\CatalogPriceRuleRepository
