Introduce OAuth2 Authorization server

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,6 +105,8 @@ swiftmailer:
   password: "%mailer_password%"
   spool: { type: memory }
 
-sensio_framework_extra:
-  router:
-    annotations: false
+api_platform:
+  title: PrestaShop API
+  version: 1.0.0
+
+  metadata_backward_compatibility_layer: false
