--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,12 +8,28 @@ security:
       memory: ~
     admin:
       id: prestashop.security.admin.provider
+    oauth2:
+      memory:
+        users:
+          my_client_id: { password: 'prestashop' }
+
+  encoders:
+    Symfony\Component\Security\Core\User\User: plaintext
+
 
   firewalls:
     # disables authentication for assets and the profiler, adapt it according to your needs
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
+
+    api:
+      pattern: ^/new-api
+      stateless: true
+      provider: 'oauth2'
+      guard:
+        authenticator:
+          - 'prestashop.security.authenticator.token'
 
     main:
       anonymous: ~
