--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-openssl": "*",
         "ext-simplexml": "*",
         "ext-zip": "*",
+        "api-platform/core": "^2.7",
         "beberlei/doctrineextensions": "^1.0",
         "bjeavons/zxcvbn-php": "^1.3",
         "composer/ca-bundle": "^1.0",
@@ -45,12 +46,15 @@
         "ircmaxell/password-compat": "^1.0.4",
         "ircmaxell/random-lib": "^1.2.0",
         "jakeasmith/http_build_url": "^1",
+        "lcobucci/jwt": "dev-3.4.6-patch as 3.4.6",
+        "league/oauth2-server": "^8.3",
         "league/tactician-bundle": "^1.0",
         "martinlindhe/php-mb-helpers": "^0.1.6",
         "matthiasmullie/minify": "~1.3.0",
         "mobiledetect/mobiledetectlib": "~2.8.34",
         "mrclay/minify": "^3.0.11",
         "nikic/php-parser": "^4.0",
+        "nyholm/psr7": "^1.5",
         "pear/archive_tar": "^1.4.12",
         "pelago/emogrifier": "^v5.0.1",
         "phpoffice/phpspreadsheet": "~1.5",
@@ -132,6 +136,7 @@
         "symfony/monolog-bundle": "^3.7.0",
         "symfony/polyfill-php73": "^1.10",
         "symfony/property-access": "^4",
+        "symfony/psr-http-message-bridge": "^2.1",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/symfony": "^4.4",
         "tecnickcom/tcpdf": "^6.2.12",
@@ -198,6 +203,12 @@
             "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
         ]
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/atomiix/jwt"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
