--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/customer_threads.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/customer_threads.yml
@@ -63,10 +63,18 @@ admin_customer_threads_forward:
 
 admin_customer_threads_delete:
   path: /{customerThreadId}/delete
-  methods: [ POST ]
+  methods: [ POST, DELETE ]
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\CustomerThreadController::deleteAction
     _legacy_controller: AdminCustomerThreads
     #  _legacy_link: AdminCustomerThreads
   requirements:
     customerThreadId: \d+
+
+admin_customer_threads_bulk_delete:
+  path: /bulk_delete
+  methods: [ POST, DELETE ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\CustomerThreadController::bulkDeleteAction
+    _legacy_controller: AdminCustomerThreads
+    #  _legacy_link: AdminCustomerThreads
