--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
@@ -345,4 +345,5 @@ services:
       - '@prestashop.adapter.data_provider.contact_type'
       - '@prestashop.adapter.data_provider.customer_thread_status'
       - '@prestashop.adapter.form.choice_provider.shop_name_by_id'
+      - '@prestashop.core.form.choice_provider.customer_thread_statuses_choice_provider'
     public: true
