--- a/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
@@ -303,3 +303,8 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\GenderChoiceProvider'
     arguments:
       - '@translator'
+
+  prestashop.core.form.choice_provider.customer_thread_statuses_choice_provider:
+    class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\CustomerThreadStatusesChoiceProvider'
+    arguments:
+      - '@prestashop.adapter.data_provider.customer_thread_status'
