--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -528,3 +528,8 @@ services:
       - '@prestashop.core.hook.dispatcher'
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'attribute'
+
+  prestashop.core.grid.data_provider.customer_thread_decorator:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\CustomerThreadGridDataFactoryDecorator'
+    arguments:
+      - '@prestashop.core.grid.data.factory.customer_thread'
