--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -21,7 +21,7 @@ monolog:
       handler: nested
     nested:
       type: rotating_file
-      max_files: 30
+      max_files: '%env(PS_LOG_MAX_FILES)%'
       path: '%env(PS_LOG_OUTPUT)%'
       level: debug
     console:
