--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,7 +64,8 @@ framework:
 monolog:
   handlers:
     main:
-      type: stream
+      type: rotating_file
+      max_files: '%env(PS_LOG_MAX_FILES)%'
       path: '%env(PS_LOG_OUTPUT)%'
       level: notice
     legacy:
