--- a/src/PrestaShopBundle/Resources/config/services/adapter/customer_service.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/customer_service.yml
@@ -37,12 +37,16 @@ services:
 
   prestashop.adapter.customer_service.command_handler.delete_customer_thread_handler:
     class: 'PrestaShop\PrestaShop\Adapter\CustomerService\CommandHandler\DeleteCustomerThreadHandler'
+    arguments:
+      - '@prestashop.adapter.customer_service.repository.customer_thread_repository'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\CustomerService\Command\DeleteCustomerThreadCommand
 
   prestashop.adapter.customer_service.command_handler.bulk_delete_customer_thread_handler:
     class: 'PrestaShop\PrestaShop\Adapter\CustomerService\CommandHandler\BulkDeleteCustomerThreadHandler'
+    arguments:
+      - '@prestashop.adapter.customer_service.repository.customer_thread_repository'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\CustomerService\Command\BulkDeleteCustomerThreadCommand
@@ -55,3 +59,6 @@ services:
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\CustomerService\Command\UpdateCustomerThreadStatusCommand
+
+  prestashop.adapter.customer_service.repository.customer_thread_repository:
+    class: 'PrestaShop\PrestaShop\Adapter\CustomerService\Repository\CustomerThreadRepository'
