--- a/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
@@ -307,4 +307,4 @@ services:
   prestashop.core.form.choice_provider.customer_thread_statuses_choice_provider:
     class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\CustomerThreadStatusesChoiceProvider'
     arguments:
-      - '@prestashop.adapter.data_provider.customer_thread_status'
+      - '@translator'
