--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_image.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_image.yml
@@ -6,7 +6,7 @@ services:
     class: PrestaShop\PrestaShop\Adapter\Product\Image\CommandHandler\AddProductImageHandler
     arguments:
       - '@prestashop.adapter.product.image.uploader.product_image_uploader'
-      - '@prestashop.adapter.product.image.repository.product_image_repository'
+      - '@prestashop.adapter.product.image.repository.product_image_multishop_repository'
       - "@prestashop.adapter.image.image_validator"
     tags:
       - name: tactician.handler
@@ -31,10 +31,21 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\Image\Command\DeleteProductImageCommand
 
+  prestashop.adapter.product.image.command_handler.set_product_images_for_all_shop_handler:
+    class: PrestaShop\PrestaShop\Adapter\Product\Image\CommandHandler\SetProductImagesForAllShopHandler
+    arguments:
+      - '@prestashop.adapter.product.image.repository.product_image_repository'
+      - '@prestashop.adapter.product.repository.product_multi_shop_repository'
+      - '@prestashop.adapter.product.image.repository.product_image_multishop_repository'
+
+    tags:
+      - name: tactician.handler
+        command: PrestaShop\PrestaShop\Core\Domain\Product\Image\Command\SetProductImagesForAllShopCommand
+
   prestashop.adapter.product.image.query_handler.get_product_images_handler:
     class: PrestaShop\PrestaShop\Adapter\Product\Image\QueryHandler\GetProductImagesHandler
     arguments:
-      - '@prestashop.adapter.product.image.repository.product_image_repository'
+      - '@prestashop.adapter.product.image.repository.product_image_multishop_repository'
       - '@prestashop.adapter.product.image.product_image_url_factory'
     tags:
       - name: tactician.handler
@@ -60,6 +71,12 @@ services:
       - '@prestashop.adapter.product.image.validate.product_image_validator'
       - '@prestashop.adapter.product.image.product_image_url_factory'
       - '@prestashop.adapter.product.combination.repository.combination_repository'
+
+  prestashop.adapter.product.image.repository.product_image_multishop_repository:
+    class: PrestaShop\PrestaShop\Adapter\Product\Image\Repository\ProductImageMultiShopRepository
+    arguments:
+      - '@doctrine.dbal.default_connection'
+      - '%database_prefix%'
       - '@prestashop.adapter.product.repository.product_multi_shop_repository'
 
   prestashop.adapter.product.image.update.product_image_updater:
